--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="below">
-            <h3 class="sub-title">Let's Build Something Amazing Together!</h3>
+            <h3 class="below">Let's Build Something Amazing Together!</h3>
             <p>Whether you're an individual or a business, let's collaborate to ensure your technology runs seamlessly. I'm here to provide reliable IT support tailored to your needs.<br>Ready to transform ideas into digital realms that leave an everlasting impression? Let's weave a web of wonders—where every click is a magical journey</p>
         </div>
     </div>
@@ -217,7 +217,6 @@
                 })
                 .catch(error => console.error('Error!', error.message))
             })
-
 
     </script>
 
