--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              <i class="fas fa-bars" onclick="openmenu()"></i>   
             </nav>
              <div class="header-text">
-                <h3>Hi, I'm Sipho Dlamini.</h3>
+                <h3><span class="animated-text">Hi, I'm Sipho Dlamini.</span></h3>
                 <h1>IT Support / IT Technician & Web Developer.</h1>   
             </div>
         </div>
