`Update CSS and HTML files with new styles and layout changes`

--- a/index.html
+++ b/index.html
@@ -224,13 +224,14 @@
 
                 <!-- Contact Form -->
                 <div class="contact-form">
-                    <form id="contact-form">
+                    <form id="contact-form" name="submit-to-google-sheet">
                         <input type="text" name="name" placeholder="Your Name" required>
                         <input type="email" name="email" placeholder="Your Email" required>
                         <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
                         <button type="submit" class="btn">Submit</button>
                         <p id="form-message"></p>
                     </form>
+                    <span id="msg"></span>
                 </div>
             </div>
         </div>
