--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="Personal Portfolio - Sipho Dlamini">
         <meta property="og:description" content="Explore the professional portfolio of Sipho Dlamini, showcasing skills, services, and projects in IT and web development.">
         <meta property="og:image" content="img/og-image.jpg">
-        <meta property="og:url" content="https://www.siphodlamini.com">
+        <meta property="og:url" content="https://mosixty1234.github.io/my-portfolio">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Sipho Dlamini Portfolio">
         <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
         
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         
         <!-- External Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
