--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <p><i class="fas fa-paper-plane"></i> scedricdlamini@gmail.com</p>
                 <P><i class="fas fa-phone-square-alt"></i> 0658958758</P>
                 <div class="social-icons">
-                    <a href="https://www.youtube.com/@msiixtyciiphow8953"><i class="fab fa-youtube"></i></a>
+                    <a href="https://youtube.com/@mosixty1234?si=oucZ0WrqOSem7hcP"><i class="fab fa-youtube"></i></a>
                     <a href="https://github.com/mosixty1234"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/sipho-dlamini-38a0211b0"><i class="fab fa-linkedin"></i></a>
                 </div>
